[package]
name = "wmb"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }          # 序列化和反序列化
serde_json = "1.0"                                         # JSON 处理
sha2 = "0.10"                                              # SHA256 哈希
secp256k1 = { version = "0.24", features = ["rand-std"] }  # ECDSA 签名，启用随机数特性
rand = "0.8"                                               # 随机数生成
libp2p = { version = "0.51", features = ["tcp", "async-std", "noise", "yamux", "floodsub", "mdns", "macros"] } # P2P 网络
bincode = "1.3"                                            # 二进制序列化
futures = "0.3"                                            # 异步编程
evm = "0.39"                                               # EVM 虚拟机
primitive-types = "0.12"                                   # 基本类型
sha3 = "0.10"                                              # Keccak256 哈希
hex = "0.4"                                                # 十六进制编码
clap = { version = "4.5", features = ["derive"] }          # 命令行解析
chrono = "0.4"                                             # 时间处理
wmb_core = { path = "core" }
wmb_security = { path = "security" }
wmb_storage = { path = "storage" }
wmb_network = { path = "network" }

[[bin]]
name = "wmb"
path = "main.rs"
[workspace]
members = [
    "core",           //核心层
    "security",       //安全层
    "storage",        //存储层
    "network",        //网络层
    "interface",      //接口层
    "extension",      //扩展层
    "application",    //应用层
    "utils/init",     //管理层
    "desktop",        //电脑前端节点软件（含macOS Linux、Windows）
]