[package]
name = "core"
version = "0.1.0"
edition = "2021"

[lib]
name = "core"
path = "lib.rs"  # 指定库文件位置

[dependencies]
bip32 = "0.5"
secp256k1 = "0.30.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
rand = "0.9.0"
bip39 = "2.1.0"
pbkdf2 = "0.12.2"
sha2 = "0.10"
sp-core = { version = "36.1.0", default-features = false, features = ["std"] }
blake2 = "0.10"
hex = "0.4"
bs58 = "0.5.1"