[package]
name = "nrc_node"    # 中文注释：国储会节点前端软件名称
version = "0.1.0"    # 中文注释：版本号
edition = "2021"     # 中文注释：Rust 版本

[dependencies]
core = { path = "../../core" }              # 中文注释：依赖核心层
security = { path = "../../security" }      # 中文注释：依赖安全层
storage = { path = "../../storage" }        # 中文注释：依赖存储层
network = { path = "../../network" }        # 中文注释：依赖网络层
interface = { path = "../../interface" }    # 中文注释：依赖接口层
extension = { path = "../../extension" }    # 中文注释：依赖扩展层
tauri = { version = "1.0", features = ["api-all"] }  # 中文注释：Tauri 框架，提供跨平台 GUI
serde = { version = "1.0", features = ["derive"] }   # 中文注释：序列化支持，用于前后端通信
tokio = { version = "1.0", features = ["full"] }     # 中文注释：异步运行时，支持异步操作