[package]
name = "wmb_prc_node"  # 中文注释：省储备委员会节点前端软件名称
version = "0.1.0"
edition = "2021"

[dependencies]
core = { path = "../../core" }
security = { path = "../../security" }
storage = { path = "../../storage" }
network = { path = "../../network" }
interface = { path = "../../interface" }
extension = { path = "../../extension" }
clap = { version = "4.0", features = ["derive"] }  # 中文注释：命令行解析
tokio = { version = "1.0", features = ["full"] }   # 中文注释：异步运行时